--- a/about_nhlakanipho.html
+++ b/about_nhlakanipho.html
@@ -14,6 +14,7 @@
         <a href="#Home">Home</a>
         <a href="#About">About</a>
         <a href="#Projects">Latest Projects</a>
+        <a href="#Case Study">Case Study</a>
         <a href="#Volunteering">Volunteering</a>
         <a href="#Technologies I Use">Technologies</a>
         <a href="#Certificates">Certificates</a>
@@ -32,6 +33,7 @@
                 width="400"
                 height="420"
                 style="border-radius: 15%;">
+                >
         </header>
     </section>
     
@@ -41,9 +43,10 @@
             <h2>About Me</h2>
             <div class="about-container">
             <div class="CV-collumn">
-            <a href="https://drive.google.com/file/d/1dgLg-UBDZKkfEHcW1c06ZbUU8l_ujYgn/view?usp=sharing" target="_blank">
-            <img src="cv image.jpeg" class="cv-image">
+            <a title="Click to see my CV" href="https://drive.google.com/file/d/1dgLg-UBDZKkfEHcW1c06ZbUU8l_ujYgn/view?usp=sharing" target="_blank">
+            <img src="cv image.jpeg" class="cv-image"> 
             </a>
+            <p style="font-size: medium; margin: 0px;"><em>Click the image to view my CV</em></p>
             </div>
             <div class="about-me">
             <p>
@@ -68,9 +71,10 @@
             <div class="project-container">
                 <!-- First Project -->
                 <div class="project-column">
-                    <a href="https://github.com/Nhlakanipho07/Top-Banks-Project" style="text-decoration: none" target="_blank">
-                    <h2>Data Insights: Top Banks</h2>
+                    <a href="https://github.com/Nhlakanipho07/Top-Banks-Project" style="text-decoration: none" target="_blank" title="Click to see the Top Banks Project repository">
+                    <h2>ETL Data Insights: Top Banks</h2>
                     <img src="bank.png" alt="Bank building Image" class="project-image">
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Top Banks project repository.</em></p>
                     </a>
                     <h3>Specifications</h3>
                     <ul class="spec-list">
@@ -102,9 +106,10 @@
 
                 <!-- Second Project -->
                 <div class="project-column">
-                    <a href="https://github.com/Nhlakanipho07/Data-Wrangling#" style="text-decoration: none" target="_blank">
+                    <a title="Click to see the Data Wrangling project repository" href="https://github.com/Nhlakanipho07/Data-Wrangling#" style="text-decoration: none" target="_blank">
                     <h2>Risk Analysis: Data Wrangling | Learner Risk Insights </h2>    
                     <img src="data analysis.png" alt="Data Wrangling Image" class="project-image">
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Data Wrangling project repository.</em></p>
                     </a>
                     <h3>Specifications</h3>
                     <ul class="spec-list">
@@ -131,9 +136,10 @@
 
                 <!-- Third Project -->
                 <div class="project-column">
-                    <a href="https://github.com/Nhlakanipho07/CompTrack-API" style="text-decoration: none" target="_blank">
+                    <a title="Click to see the CompTrack API project repository" href="https://github.com/Nhlakanipho07/CompTrack-API" style="text-decoration: none" target="_blank">
                     <h2>Data Reporting API: CompTrack API</h2>
                     <img src="CompTrack 2.jpeg" alt="CompTrack API Image" class="project-image">
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the CompTrack API project repository.</em></p>
                     </a>
                     <h3>Specifications</h3>
                     <ul class="spec-list">
@@ -162,9 +168,10 @@
             <div class="project-container">
                 <!-- Forth Project -->
                 <div class="project-column">
-                    <a href="https://github.com/Nhlakanipho07/Visitor-Admin" style="text-decoration: none" target="_blank">
-                    <h2>Data Storage: Visitor Admin</h2>
+                    <a title="Click to see the Visitor Admin project repository" href="https://github.com/Nhlakanipho07/Visitor-Admin" style="text-decoration: none" target="_blank">
+                    <h2>MongoDB Data Storage: Visitor Admin</h2>
                     <img src="visitors.jpeg" alt="Visitor Admin Image" class="project-image">
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Visitor Admin project repository.</em></p>
                     </a>
                     <h3>Specifications</h3>
                     <ul class="spec-list">
@@ -195,9 +202,10 @@
                 </div>                
                 <!-- Fifth Project -->
                 <div class="project-column">
-                    <a href="https://github.com/Nhlakanipho07/Shop-Database" style="text-decoration: none" target="_blank">
-                    <h2>PostgreSQL: SQL-Driven Shop Analytics Database</h2>
+                    <a title="Click to see the Shop Database using SQL project repository" href="https://github.com/Nhlakanipho07/Shop-Database" style="text-decoration: none" target="_blank">
+                    <h2>PostgreSQL Database: SQL-Driven Shop Analytics</h2>
                     <img src="shop database.png" alt="Shop Database Image" class="project-image">
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Shop Database project repository.</em></p>
                     </a>
                     <h3>Specifications</h3>
                     <ul class="spec-list">
@@ -219,6 +227,62 @@
                     </div>
             </div>
         </section>
+
+        <!--Case Study-->
+        <section id="Case Study" class="case_study">
+            <h2>Case Study</h2>
+            <div class="case_study-container">
+            <h2 style="text-decoration: none;">Personal Tracker for Learning Progress & Standup Planning</h2>  
+            <div class="work-description-section">
+            <div><a title="Click to download the Personal Tracker excel spreadsheet" href="https://drive.google.com/file/d/1S6tY6p1QryDxVk2o901uj7dBeDF3uvV8/view?usp=sharing" target="_blank" alt="excel tracker">
+                <img src="excel_1.png" alt="Data Entry Image" class="data_entry_image">        
+                </a>
+                <p style="font-size: medium; margin-left: 15px; padding: 0px;"><em>Click the image to download the Personal Tracker excel spreadsheet.</em></p>
+            </div>
+            <div class="work-description"> 
+                <h3>Context</h3>       
+            <p>
+                During my learnership, consistent performance reporting wasn't readily 
+                available—feedback was mostly shared verbally, and digital updates were 
+                inconsistent or inaccurate. To maintain momentum and visibility over my own 
+                progress, I created a personalized Excel system to track goals, performance, 
+                and daily priorities independently. Click on the image on the left to download and view the 
+                excel tracker.
+            </p>
+            <h3>Goals</h3>
+            <ul>
+                <li>Structure daily tasks to stay focused and prepare effectively for stand-up meetings.</li>
+                <li>Track Coderbyte test scores and maintain a transparent view of personal performance.</li>
+                <li>Estimate program completion status as a percentage and measure it against my current progress.</li>
+                <li>Supplement missing institutional data with an accurate, self-managed system.</li>
+            </ul>
+            <h3>Approach</h3>
+            <ul>
+                <li>Developed a daily planner in Excel using formulas, conditional formatting, and modular task entries.</li>
+                <li>Logged and visualized Coderbyte scores over time to identify trends and areas for focus.</li>
+                <li>Created a custom formula to calculate where I should be in the program (as a percentage) and compared it to my actual progress.</li>
+                <li>Chose a flexible planning structure over rigid time blocks to better support the unpredictability of remote learning, allowing the system to remain valuable even when the day didn't follow the plan.</li>
+                <li>Iteratively refined the tracker to adapt to evolving needs and sustain consistent usage.</li>
+            </ul>
+          <h3>Key Features</h3>
+            <ul>
+                <li><strong>Progress Estimator:</strong> Formula-driven tracking of program advancement—target progress vs. actual progress.</li>
+                <li><strong>Visual Clarity:</strong> Clustered bar charts, combination charts, and conditional formatting to highlight task progress status and missed goals.</li>
+                <li><strong>Self-Assessment Framework:</strong> Enabled proactive learning and reflection in the absence of accurate external feedback.</li>
+                <li><strong>Productivity Support:</strong> Simple task planner for daily stand-up readiness and milestone alignment.</li>
+            </ul>
+         <h3>Impact</h3>
+            <ul>
+                <li>Replaced unreliable feedback with clear, data-driven self-reporting.</li>
+                <li>Enhanced my ability to prepare for stand-ups with structured, visible progress.</li>
+                <li>Improved my focus and productivity by providing a clear view of daily priorities.</li>
+                <li>Demonstrated initiative, structured thinking, and the ability to build solutions when existing systems fall short.</li>
+            </ul>
+            </div>
+            </div>
+            </div>
+        </section>
+
 
         <!--Volunteering-->
         <section id="Volunteering" class="work">
@@ -279,19 +343,24 @@
         <section id="Certificates">
             <h2>Certificates</h2>
             <div class="certificates">
-                <div class="certificate-column">  
-                    <h3>Umuzi Academy | National Certificate: Business Analysis Support Practice NQF Level 5</h3>                  
+                <div class="certificate-column">                                    
+                    <a title="Click to email me for a credit confirmation letter." href="mailto:nhlakanipho.ngubo@umuzi.org?subject=Credit Confirmation&body=Hi Nhlakanipho, please send me the letter confirming credits." 
+                    style="text-decoration: none" target="_blank">
+                    <h3>National Certificate: Business Analysis Support Practice NQF Level 5</h3>
                     <img src="business analysis.png" alt="Business Analysis Support Practice Certificate" class="certificate-image">
+                    </a>
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>SETA certificate pending. For a credit confirmation letter, please email me.</em></p>
                     <p>Blending analytical thinking with creative problem-solving to uncover insights, translate 
                         business needs into data-driven solutions, and support decision-making through structured,
                         actionable analysis.
                     </p>
                 </div>
                 <div class="certificate-column">                    
-                    <a href="https://www.credly.com/badges/cec3af3e-18a8-4e6e-b2f2-f6ffea3ae948/public_url" style="text-decoration: none" target="_blank">
+                    <a title="Click to see the IBM badge." href="https://www.credly.com/badges/cec3af3e-18a8-4e6e-b2f2-f6ffea3ae948/public_url" style="text-decoration: none" target="_blank">
                         <h3>IBM Certificate: Python for Data Science, AI, and Development</h3>
                         <img src="python-for-data-science-and-ai.png" alt="Python for Data Science IBM Certificate" class="certificate-image">
                     </a>
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Python for Data Science IBM badge.</em></p>
                     <p>
                         Built a solid foundation in Python for data analysis, using pandas and numpy to 
                         manipulate and explore datasets in analytical workflows. Applied these skills to 
@@ -299,10 +368,11 @@
                     </p>
                 </div>
                 <div class="certificate-column">                    
-                    <a href="https://www.credly.com/badges/315b2869-654f-4fe6-bb13-664dc19c8dbe/public_url" style="text-decoration: none" target="_blank">
+                    <a title="Click to see the IBM badge." href="https://www.credly.com/badges/315b2869-654f-4fe6-bb13-664dc19c8dbe/public_url" style="text-decoration: none" target="_blank">
                         <h3>IBM Certificate: Python Project for Data Engineering | Top Banks</h3>
                         <img src="python-project-for-data-engineering.png" alt="Python project for Data Engineering IBM Certificate" class="certificate-image">
                     </a>
+                    <p style="font-size: medium; margin-left: 20px; padding: 0px;"><em>Click the image to view the Python project for Data Engineering IBM badge.</em></p>
                     <p>
                        Developed a data pipeline for banking sector analysis, extracting financial 
                        data via APIs and web scraping. Transformed datasets across formats, applied 
@@ -353,10 +423,12 @@
         <section id="Contacts">
             <h2>Contact Me</h2>
             <div class="contacts">
-                <p>
-                    Looking for a data analyst who can explore, wrangle, and interpret data
-                    with clarity and purpose? Let's connect and uncover insights together.
-                </p>
+                <p style="text-align: left; font-size: large;"><em>
+                    Looking for a data analyst who can explore, wrangle, and 
+                    interpret data with clarity and purpose? I'm open to freelance work 
+                    and volunteering opportunities to gain experience and deliver impact. 
+                    Let's connect and uncover insights together.
+                </p></em>
                 <h3>nhlakanipho.ngubo@umuzi.org:</h3>
                 <a href="mailto:nhlakanipho.ngubo@umuzi.org" target="_blank">
                  <img 
