--- a/about_nhlakanipho.html
+++ b/about_nhlakanipho.html
@@ -242,7 +242,7 @@
             <div class="work-description"> 
                 <h3>Context</h3>       
             <p>
-                During my learnership, consistent performance reporting wasn't readily 
+                During my learnership at Umuzi Academy, consistent performance reporting wasn't readily 
                 available—feedback was mostly shared verbally, and digital updates were 
                 inconsistent or inaccurate. To maintain momentum and visibility over my own 
                 progress, I created a personalized Excel system to track goals, performance, 
