--- a/about_nhlakanipho.html
+++ b/about_nhlakanipho.html
@@ -25,7 +25,8 @@
     <!-- Home Section -->
     <section id="Home">
         <header>
-            <h1>Hi there, I am Nhlakanipho Ngubo, a Data Analyst</h1>
+            <h1>Curious mind, clear insights—driven to make data matter. 
+                Hi there, I'm Nhlakanipho Ngubo, a Data Analyst.</h1>
             <img
                 src="Profile picture.jpg"
                 class="Profile-pic"
