Updated Context in Case study

--- a/about_nhlakanipho.html
+++ b/about_nhlakanipho.html
@@ -247,8 +247,7 @@
                 available—feedback was mostly shared verbally, and digital updates were 
                 inconsistent or inaccurate. To maintain momentum and visibility over my own 
                 progress, I created a personalized Excel system to track goals, performance, 
-                and daily priorities independently. Click on the image on the left to download and view the 
-                excel tracker.
+                and daily priorities independently.
             </p>
             <h3>Goals</h3>
             <ul>
